Fixed nav bar spacing

--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,8 @@ ul{
 }
 .section-one{
     background-color: #1f2937;
-    padding-left: 175px;
-    padding-right: 175px;
+    padding-left: 155px;
+    padding-right: 155px;
     padding-top: 10px;
     padding-bottom: 100px;
 }
